--- a/models/staging/flights/_flights__sources.yml
+++ b/models/staging/flights/_flights__sources.yml
@@ -16,3 +16,16 @@ sources:
       - name: flights
       - name: ticket_flights
       - name: tickets
+      - name: bookings
+        columns:
+          - name: book_ref
+          - name: book_date
+          - name: total_amount
+        freshness: 
+          warn_after: {count: 6, period: hour}
+          error_after: {count: 1, period: day}
+            
+          filter: current_timestamp::date - book_date::date < 3
+        loaded_at_field: book_date::timestamp
+
+
