--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -32,8 +32,13 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   dbt_course_practice:
     # Config indicated by + and applies to all files under models/example/
-    example:
-      +materialized: view
+  
+    staging:
+      flights:
+        +tags: "staging"
+    intermediate:
+      +tags: "intermediate"
+  
 
 seeds:
   schema: seeds
